--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <div class="product blood">
           <div class="product-inner">
             <a href="https://rebuild.testyourintolerance.com/index.php/product/sensitivity-test/"><img src="/images/allergy-test-35.jpg" alt="sensitivity-kit"></a>
-            <p class="tag blood">Best allergy tet</p>
+            <p class="tag blood">Best allergy test</p>
             <h3>Allergy Test</h3>
             <ul>
               <li class="items-tested">35 allergies tested</li>
